--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,28 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/main.css": "/css/main.css",
+    "/js/main.js": "/js/main.js",
+    "/fonts/icomoon.eot": "/fonts/icomoon.eot",
+    "/fonts/icomoon.svg": "/fonts/icomoon.svg",
+    "/fonts/icomoon.ttf": "/fonts/icomoon.ttf",
+    "/fonts/icomoon.woff": "/fonts/icomoon.woff",
+    "/fonts/PTSerif-Bold.woff2": "/fonts/PTSerif-Bold.woff2",
+    "/fonts/PTSerif-BoldItalic.woff2": "/fonts/PTSerif-BoldItalic.woff2",
+    "/fonts/PTSerif-Italic.woff2": "/fonts/PTSerif-Italic.woff2",
+    "/fonts/PTSerif-Regular.woff2": "/fonts/PTSerif-Regular.woff2",
+    "/images/favicon.png": "/images/favicon.png",
+    "/images/src/bg.jpg": "/images/src/bg.jpg",
+    "/images/src/css_sprites.png": "/images/src/css_sprites.png",
+    "/images/src/demo/article_1080-450.jpg": "/images/src/demo/article_1080-450.jpg",
+    "/images/src/demo/article_1080-500.jpg": "/images/src/demo/article_1080-500.jpg",
+    "/images/src/demo/article_1080-600.jpg": "/images/src/demo/article_1080-600.jpg",
+    "/images/src/demo/list/1_s.jpg": "/images/src/demo/list/1_s.jpg",
+    "/images/src/demo/list/2_s.jpg": "/images/src/demo/list/2_s.jpg",
+    "/images/src/demo/list/3_s.jpg": "/images/src/demo/list/3_s.jpg",
+    "/images/src/demo/list/4_s.jpg": "/images/src/demo/list/4_s.jpg",
+    "/images/src/demo/list/5_s.jpg": "/images/src/demo/list/5_s.jpg",
+    "/images/src/demo/list/6_s.jpg": "/images/src/demo/list/6_s.jpg",
+    "/images/src/svg/search.svg": "/images/src/svg/search.svg",
+    "/images/src/svg/sprite.svg": "/images/src/svg/sprite.svg"
 }
