--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -11,6 +11,25 @@
     "/fonts/PTSerif-BoldItalic.woff2": "/fonts/PTSerif-BoldItalic.woff2",
     "/fonts/PTSerif-Italic.woff2": "/fonts/PTSerif-Italic.woff2",
     "/fonts/PTSerif-Regular.woff2": "/fonts/PTSerif-Regular.woff2",
+    "/images/article/2/same_1.jpg": "/images/article/2/same_1.jpg",
+    "/images/article/2/same_2.jpg": "/images/article/2/same_2.jpg",
+    "/images/article/2/same_3.jpg": "/images/article/2/same_3.jpg",
+    "/images/article/2/same_4.jpg": "/images/article/2/same_4.jpg",
+    "/images/article/2/same_consol.jpg": "/images/article/2/same_consol.jpg",
+    "/images/favicon/android-chrome-192x192.png": "/images/favicon/android-chrome-192x192.png",
+    "/images/favicon/android-chrome-512x512.png": "/images/favicon/android-chrome-512x512.png",
+    "/images/favicon/apple-touch-icon.png": "/images/favicon/apple-touch-icon.png",
+    "/images/favicon/browserconfig.xml": "/images/favicon/browserconfig.xml",
+    "/images/favicon/favicon-16x16.png": "/images/favicon/favicon-16x16.png",
+    "/images/favicon/favicon-32x32.png": "/images/favicon/favicon-32x32.png",
+    "/images/favicon/favicon.ico": "/images/favicon/favicon.ico",
+    "/images/favicon/mstile-144x144.png": "/images/favicon/mstile-144x144.png",
+    "/images/favicon/mstile-150x150.png": "/images/favicon/mstile-150x150.png",
+    "/images/favicon/mstile-310x150.png": "/images/favicon/mstile-310x150.png",
+    "/images/favicon/mstile-310x310.png": "/images/favicon/mstile-310x310.png",
+    "/images/favicon/mstile-70x70.png": "/images/favicon/mstile-70x70.png",
+    "/images/favicon/safari-pinned-tab.svg": "/images/favicon/safari-pinned-tab.svg",
+    "/images/favicon/site.webmanifest": "/images/favicon/site.webmanifest",
     "/images/favicon.png": "/images/favicon.png",
     "/images/src/bg.jpg": "/images/src/bg.jpg",
     "/images/src/css_sprites.png": "/images/src/css_sprites.png",
@@ -23,6 +42,10 @@
     "/images/src/demo/list/4_s.jpg": "/images/src/demo/list/4_s.jpg",
     "/images/src/demo/list/5_s.jpg": "/images/src/demo/list/5_s.jpg",
     "/images/src/demo/list/6_s.jpg": "/images/src/demo/list/6_s.jpg",
+    "/images/src/no-photo/full.jpg": "/images/src/no-photo/full.jpg",
+    "/images/src/no-photo/middle.jpg": "/images/src/no-photo/middle.jpg",
+    "/images/src/no-photo/small.jpg": "/images/src/no-photo/small.jpg",
+    "/images/src/no-photo/tiny.jpg": "/images/src/no-photo/tiny.jpg",
     "/images/src/svg/search.svg": "/images/src/svg/search.svg",
     "/images/src/svg/sprite.svg": "/images/src/svg/sprite.svg"
 }
