--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -44,6 +44,7 @@
     "/images/src/demo/list/6_s.jpg": "/images/src/demo/list/6_s.jpg",
     "/images/src/no-photo/full.jpg": "/images/src/no-photo/full.jpg",
     "/images/src/no-photo/middle.jpg": "/images/src/no-photo/middle.jpg",
+    "/images/src/no-photo/nope.jpg": "/images/src/no-photo/nope.jpg",
     "/images/src/no-photo/small.jpg": "/images/src/no-photo/small.jpg",
     "/images/src/no-photo/tiny.jpg": "/images/src/no-photo/tiny.jpg",
     "/images/src/svg/search.svg": "/images/src/svg/search.svg",
