News - CRUD + site.map

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.7",
         "spatie/image": "^2.2",
         "spatie/laravel-medialibrary": "^10.0.0",
+        "spatie/laravel-sitemap": "^6.2",
         "spatie/laravel-sluggable": "^3.4",
         "symfony/dom-crawler": "^6.1"
     },
